--- a/environment.yml
+++ b/environment.yml
@@ -28,3 +28,5 @@ dependencies:
     - xesmf
     - dask-jobqueue # Addition 1/25/2024
     - glob          # Addition 2/18/2024
+    - from sklearn.model_selection import train_test_split
+    - from sklearn.linear_model import LinearRegression
