--- a/environment.yml
+++ b/environment.yml
@@ -27,6 +27,7 @@ dependencies:
     - xarray        # N-d labeled array library
     - xesmf
     - dask-jobqueue # Addition 1/25/2024
-    - glob          # Addition 2/18/2024
+    - glob          # Addition 2/18/2024  
     - from sklearn.model_selection import train_test_split
     - from sklearn.linear_model import LinearRegression
+    - panel         #Addition 3/1/2024
