--- a/environment.yml
+++ b/environment.yml
@@ -30,4 +30,5 @@ dependencies:
     - scikit-learn       #Update 3/3/2024
     - panel         #Addition 3/1/2024
     - gpflow        # ML Library added 3/25/2024
+    - scikit-optimize          # ML Library added 3/29/2024
     
